// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginForm /> should render correctly 1`] = `
<LoginForm
  onClickMessageHandler={[MockFunction]}
>
  <styled.div>
    <div
      className="sc-AxjAm kFqgcy"
    >
      <styled.img
        alt="logo"
        src={Object {}}
      >
        <img
          alt="logo"
          className="sc-AxhUy fdjSkp"
          src={Object {}}
        />
      </styled.img>
      <form>
        <styled.input
          placeholder="username"
          type="text"
        >
          <input
            className="sc-AxirZ PTCQu"
            placeholder="username"
            type="text"
          />
        </styled.input>
        <styled.input
          placeholder="password"
          type="password"
        >
          <input
            className="sc-AxirZ PTCQu"
            placeholder="password"
            type="password"
          />
        </styled.input>
        <styled.button>
          <button
            className="sc-AxiKw bAyasi"
          >
            login
          </button>
        </styled.button>
        <styled.p>
          <p
            className="sc-AxhCb eVMfSZ"
          >
            <span>
              Already registered? 
            </span>
            <a
              href="#"
              onClick={[MockFunction]}
            >
              Sign In
            </a>
          </p>
        </styled.p>
      </form>
    </div>
  </styled.div>
</LoginForm>
`;

exports[`<LoginForm /> should render correctly with default props 1`] = `
<LoginForm
  onClickMessageHandler={[Function]}
>
  <styled.div>
    <div
      className="sc-AxjAm kFqgcy"
    >
      <styled.img
        alt="logo"
        src={Object {}}
      >
        <img
          alt="logo"
          className="sc-AxhUy fdjSkp"
          src={Object {}}
        />
      </styled.img>
      <form>
        <styled.input
          placeholder="username"
          type="text"
        >
          <input
            className="sc-AxirZ PTCQu"
            placeholder="username"
            type="text"
          />
        </styled.input>
        <styled.input
          placeholder="password"
          type="password"
        >
          <input
            className="sc-AxirZ PTCQu"
            placeholder="password"
            type="password"
          />
        </styled.input>
        <styled.button>
          <button
            className="sc-AxiKw bAyasi"
          >
            login
          </button>
        </styled.button>
        <styled.p>
          <p
            className="sc-AxhCb eVMfSZ"
          >
            <span>
              Already registered? 
            </span>
            <a
              href="#"
              onClick={[Function]}
            >
              Sign In
            </a>
          </p>
        </styled.p>
      </form>
    </div>
  </styled.div>
</LoginForm>
`;
